k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-deployment
  labels:
    name:  auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app:  auth-server
    spec:
      containers:
      - image:  auth
        name:  auth-server
        resources:
          limits:
            cpu: '500m'
            memory: "256M"
          requests:
            cpu: "250m"
            memory: "128M"
        livenessProbe:
          httpGet:
            path: /api/auth/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/auth/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  auth-http
