k8s/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  notification-deployment
  labels:
    name:  notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-server
  template:
    metadata:
      labels:
        app:  notification-server
    spec:
      containers:
      - image:  notification
        name:  notification-container
        resources:
          requests:
            cpu: "50m"
            memory: "60M"
          limits:
            cpu: "75m"
            memory: "80M"
        livenessProbe:
          httpGet:
            path: /api/mail/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/mail/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name: notify-http
