k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router-deployment
  labels:
    name:  router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app:  router
    spec:
      containers:
      - image:  router:latest
        name:  router-server
        resources:
          limits:
            cpu: "200m"
            memory: "200M"
          requests:
            cpu: "100m" 
            memory: "100M"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  my-name
