k8s/notification-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  notification-service
spec:
  selector:
    app: notification-server
  type:  ClusterIP
  ports:
  - name: notification-port
    port:  80
    targetPort:  3000
